# picoTracker

./: .clang-format  .firebaserc  .gitignore  .gitmodules  AGENTS.md  GEMINI.md  LICENSE  README.md  firebase.json
docs/: BUILD.md  (+11 more)
sources/: CMakeLists.txt  CMakePresets.json
sources/Adapters/: CMakeLists.txt
sources/Adapters/Dummy/: CMakeLists.txt
sources/Adapters/PICO/: CMakeLists.txt
sources/Adapters/RTAudio/: RTAudioDriver.cpp  RTAudioDriver.h  RTAudioStub.cpp  RTAudioStub.h
sources/Adapters/RTMidi/: RTMidiInDevice.cpp  RTMidiInDevice.h  RTMidiOutDevice.cpp  RTMidiOutDevice.h  RTMidiService.cpp  RTMidiService.h
sources/Adapters/W32FileSystem/: W32FileSystem.cpp  W32FileSystem.h
sources/Adapters/WSDLSystem/: WSDLSystem.cpp  WSDLSystem.h
sources/Adapters/WSDLUI/: GUIFactory.cpp  WSDLGUIWindowImp.cpp  WSDLGUIWindowImp.h
sources/Adapters/adv/: .mxproject  CMakeLists.txt  STM32H743XX_FLASH.ld  adv.ioc  startup_stm32h743xx.s
sources/Adapters/picoTracker/: CMakeLists.txt  adapter.cmake
sources/Adapters/picoTrackerPlus/: CMakeLists.txt
sources/Application/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  CMakeLists.txt
sources/Application/Audio/: AudioFileStreamer.cpp  AudioFileStreamer.h  CMakeLists.txt  DummyAudioOut.cpp  DummyAudioOut.h  RecordStreamer.cpp  RecordStreamer.h
sources/Application/Commands/: ApplicationCommandDispatcher.cpp  ApplicationCommandDispatcher.h  CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  EventDispatcher.cpp  EventDispatcher.h  NodeList.h
sources/Application/Controllers/: CMakeLists.txt  ControlRoom.cpp  ControlRoom.h
sources/Application/Instruments/: CMakeLists.txt  CommandList.cpp  CommandList.h  CompileTimeFunctions.h  Filters.cpp  Filters.h  GameBoyCompileTimeFunctions.h  GameBoyEngine.h  GameBoyEnums.h  GameBoyEnvelope.h  GameBoyInstrument.cpp  GameBoyInstrument.h  GameBoyTables.h  GameboyMath.h  I_Instrument.cpp  I_Instrument.h  I_SRPUpdater.h  InstrumentBank.cpp  InstrumentBank.h  InstrumentNameVariable.cpp  InstrumentNameVariable.h  MacroInstrument.cpp  MacroInstrument.h  MidiInstrument.cpp  MidiInstrument.h  NoneInstrument.cpp  NoneInstrument.h  OpalInstrument.cpp  OpalInstrument.h  PicoSynthInstrument.cpp  PicoSynthInstrument.h  SIDInstrument.cpp  SIDInstrument.h  SRPUpdaters.cpp  SRPUpdaters.h  SampleInstrument.cpp  SampleInstrument.h  SampleInstrumentDatas.h  SamplePool.cpp  SamplePool.h  (+22 more)
sources/Application/Mixer/: CMakeLists.txt  MixBus.cpp  MixBus.h  MixerService.cpp  MixerService.h
sources/Application/Model/: .clang-format  BuildNumber.h  CMakeLists.txt  Chain.cpp  Chain.h  Config.cpp  Config.h  Groove.cpp  Groove.h  Mixer.cpp  Mixer.h  Phrase.cpp  Phrase.h  Project.cpp  Project.h  Scale.cpp  Scale.h  Song.cpp  Song.h  Table.cpp  Table.h  Theme.cpp  Theme.h  ThemeConstants.h
sources/Application/Persistency/: CMakeLists.txt  PersistenceConstants.h  PersistencyDocument.cpp  PersistencyDocument.h  PersistencyService.cpp  PersistencyService.h  Persistent.cpp  Persistent.h
sources/Application/Player/: CMakeLists.txt  Player.cpp  Player.h  PlayerChannel.cpp  PlayerChannel.h  PlayerMixer.cpp  PlayerMixer.h  Reverb.h  SyncMaster.cpp  SyncMaster.h  TablePlayback.cpp  TablePlayback.h  q15.h
sources/Application/Utils/: AllocUtils.h  CMakeLists.txt  DrawTools.cpp  DrawTools.h  DrawUtils.cpp  DrawUtils.h  HelpLegend.h  HexBuffers.cpp  HexBuffers.h  MemoryPool.cpp  MemoryPool.h  ScopedLock.h  StringTokenizer.h  bit.h  char.cpp  char.h  fixed.cpp  fixed.h  mathutils.h  randomnames.h  stringutils.cpp  stringutils.h  wildcard.cpp  wildcard.h
sources/Application/Views/: CMakeLists.txt  ChainView.cpp  ChainView.h  ConsoleView.cpp  ConsoleView.h  DeviceView.cpp  DeviceView.h  FieldView.cpp  FieldView.h  FileView.cpp  FileView.h  GraphField.cpp  GraphField.h  GrooveView.cpp  GrooveView.h  ImportView.cpp  ImportView.h  InstrumentImportView.cpp  InstrumentImportView.h  InstrumentView.cpp  InstrumentView.h  InstrumentView_Chiptune.ipp  InstrumentView_GameBoy.ipp  ListSelectView.cpp  ListSelectView.h  MachineView.cpp  MachineView.h  MixerView.cpp  MixerView.h  NullView.cpp  NullView.h  PhraseView.cpp  PhraseView.h  ProjectView.cpp  ProjectView.h  RecordView.cpp  RecordView.h  SampleEditProgressDisplay.cpp  SampleEditProgressDisplay.h  SampleEditorView.cpp  (+22 more)
sources/DSP/: CMakeLists.txt  main.cpp
sources/Foundation/: CMakeLists.txt  I_Hashkey.cpp  I_Hashkey.h  I_Iterator.h  I_List.h  IteratorPtr.h  Observable.cpp  Observable.h  PointerHashKey.cpp  PointerHashKey.h  RTTypable.cpp  RTTypable.h  RTTypeInfo.cpp  RTTypeInfo.h  SingletonRegistry.cpp  SingletonRegistry.h  T_Factory.cpp  T_Factory.h  T_Hashtable.cpp  T_Hashtable.h  T_HashtableIterator.cpp  T_HashtableIterator.h  T_SimpleList.cpp  T_SimpleList.h  T_SimpleListIterator.cpp  T_SimpleListIterator.h  T_Singleton.cpp  T_Singleton.h  T_Stack.cpp  T_Stack.h  T_Vector.cpp  T_Vector.h
sources/Foundation/Constants/: SineTable.h  SpecialCharacters.h
sources/Foundation/Services/: CMakeLists.txt  MemoryService.h  Service.cpp  Service.h  ServiceRegistry.cpp  ServiceRegistry.h  SubService.cpp  SubService.h
sources/Foundation/Types/: Types.h
sources/Foundation/Variables/: CMakeLists.txt  StringVariable.h  Variable.cpp  Variable.h  VariableContainer.cpp  VariableContainer.h  WatchedVariable.cpp  WatchedVariable.h
sources/Resources/: lgpt.rc  resource.h
sources/Services/: CMakeLists.txt
sources/Services/Audio/: Audio.cpp  Audio.h  AudioDriver.cpp  AudioDriver.h  AudioMixer.cpp  AudioMixer.h  AudioModule.h  AudioOut.cpp  AudioOut.h  AudioOutDriver.cpp  AudioOutDriver.h  AudioSettings.h  CMakeLists.txt
sources/Services/Controllers/: ButtonControllerSource.cpp  ButtonControllerSource.h  CMakeLists.txt  Channel.cpp  Channel.h  ControlNode.cpp  ControlNode.h  ControllableVariable.cpp  (+13 more)
sources/System/: CMakeLists.txt
sources/UIFramework/: CMakeLists.txt
sources/config/: StringLimits.h  etl_profile.h  no_heap.h
sources/sdk_bundle/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  foundation_types_tests.cpp  test_main.cpp  wavheader_tests.cpp
(+977 files in other folders)
