add_subdirectory(main)
add_subdirectory(system)
add_subdirectory(gui)
add_subdirectory(timer)
add_subdirectory(display)
add_subdirectory(sdcard)
add_subdirectory(audio)
add_subdirectory(utils)
add_subdirectory(midi)
add_subdirectory(platform)
add_subdirectory(usb)
add_subdirectory(filesystem)
add_subdirectory(mutex)
